@@ -24,6 +24,7 @@
     Some use A and B registers                      (MOXIE_F1_AB)
     Some use A and consume a 4 byte immediate value (MOXIE_F1_A4)
     Some use just a 4 byte immediate value          (MOXIE_F1_4)
+    Some use just a 4 byte memory address           (MOXIE_F1_M)
     Some use B and an indirect A                    (MOXIE_F1_AiB)
     Some use A and an indirect B                    (MOXIE_F1_ABi)
     Some consume a 4 byte immediate value and use X (MOXIE_F1_4A)
@@ -50,6 +51,7 @@
 #define MOXIE_F1_4A   0x108
 #define MOXIE_F1_AiB4 0x109
 #define MOXIE_F1_ABi4 0x10a
+#define MOXIE_F1_M    0x10b
 
 #define MOXIE_F2_NARG 0x200
 #define MOXIE_F2_A8V  0x201
