@@ -55,7 +55,7 @@ const moxie_opc_info_t moxie_form1_opc_info[64] =
     { 0x00, MOXIE_F1_NARG, "nop" },
     { 0x01, MOXIE_F1_A4,   "ldi.l" },
     { 0x02, MOXIE_F1_AB,   "mov" },
-    { 0x03, MOXIE_F1_4,    "jsra" },
+    { 0x03, MOXIE_F1_M,    "jsra" },
     { 0x04, MOXIE_F1_NARG, "ret" },
     { 0x05, MOXIE_F1_AB,   "add.l" },
     { 0x06, MOXIE_F1_AB,   "push" },
@@ -67,18 +67,18 @@ const moxie_opc_info_t moxie_form1_opc_info[64] =
     { 0x0c, MOXIE_F1_ABi4, "ldo.l" },
     { 0x0d, MOXIE_F1_AiB4, "sto.l" },
     { 0x0e, MOXIE_F1_AB,   "cmp" },
-    { 0x0f, MOXIE_F1_4,    "beq" },
-    { 0x10, MOXIE_F1_4,    "bne" },
-    { 0x11, MOXIE_F1_4,    "blt" },
-    { 0x12, MOXIE_F1_4,    "bgt" },
-    { 0x13, MOXIE_F1_4,    "bltu" },
-    { 0x14, MOXIE_F1_4,    "bgtu" },
-    { 0x15, MOXIE_F1_4,    "bge" },
-    { 0x16, MOXIE_F1_4,    "ble" },
-    { 0x17, MOXIE_F1_4,    "bgeu" },
-    { 0x18, MOXIE_F1_4,    "bleu" },
+    { 0x0f, MOXIE_F1_M,    "beq" },
+    { 0x10, MOXIE_F1_M,    "bne" },
+    { 0x11, MOXIE_F1_M,    "blt" },
+    { 0x12, MOXIE_F1_M,    "bgt" },
+    { 0x13, MOXIE_F1_M,    "bltu" },
+    { 0x14, MOXIE_F1_M,    "bgtu" },
+    { 0x15, MOXIE_F1_M,    "bge" },
+    { 0x16, MOXIE_F1_M,    "ble" },
+    { 0x17, MOXIE_F1_M,    "bgeu" },
+    { 0x18, MOXIE_F1_M,    "bleu" },
     { 0x19, MOXIE_F1_A,    "jsr" },
-    { 0x1a, MOXIE_F1_4,    "jmpa" },
+    { 0x1a, MOXIE_F1_M,    "jmpa" },
     { 0x1b, MOXIE_F1_A4,   "ldi.b" },
     { 0x1c, MOXIE_F1_ABi,  "ld.b" },
     { 0x1d, MOXIE_F1_A4,   "lda.b" },
