@@ -1,3 +1,8 @@
+2009-06-06  Anthony Green  <green@moxielogic.com>
+
+	* moxie-opc.c: Recode some MOXIE_F1_4 opcodes as MOXIE_F1_M.
+	* moxie-dis.c (print_insn_moxie): Handle MOXIE_F1_M case.
+
 2009-06-04  Alan Modra  <amodra@bigpond.net.au>
 
 	* dep-in.sed: Don't use \n in replacement part of s command.
